@@ -15,6 +15,7 @@ Coccinella-0.95.16 (200701??):
  o added file/export/roster menu command
  o added search previous
  o added menu to increase the smallest font sizes in two steps
+ o added SOCKS proxy
 
 Coccinella-0.95.15 (20061117):
 
